# PokeRougeCmake

./: CMakeLists.txt
include/: Ability.h  Atlas.h  Global.h  Pokemon.h  Timer.h  Vector2.h  common.h
src/: Atlas.cpp  Global.cpp  Pokemon.cpp  main.cpp
